--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geraldo - Engenheiro de Automação</title>
     <meta name="description" content="Portfólio de Geraldo - Engenheiro de Automação especializado em soluções inteligentes e otimização de processos industriais">
-    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     
@@ -147,7 +145,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Localização</h4>
-                            <p>São Paulo, Brasil</p>
+                            <p>Recife, Brasil</p>
                         </div>
                     </div>
                 </div>
@@ -188,4 +186,5 @@
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
 </body>
+
 </html>
